--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .vscode
 .idea
-.ipynb_checkpoints
+**/.ipynb_checkpoints/
 .pytest_cache
 
 demo.py
+
+
+data_analysis_python_coursera
+Michigan_Course_Materials
+raghaca_kursi
