--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ demo.py
 data_analysis_python_coursera
 Michigan_Course_Materials
 raghaca_kursi
+advanced pandas
+es_naxe_aucileblad_gaakete
+pandas-playbook-manipulating-data
+pandas-playbook-visualization
