--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,15 @@
 demo.py
 
 
-data_analysis_python_coursera
+
 Michigan_Course_Materials
-raghaca_kursi
-advanced pandas
-es_naxe_aucileblad_gaakete
-pandas-playbook-manipulating-data
-pandas-playbook-visualization
+
+
+temporary
+
+
+
+
+Lecture 5
+Lecture 6
+
